Fix search bar input on focus 1px shift (#1922)
Previously the `.search-input` set of styles defined `border: none`,
while its `:focus` state has 1px border set. This led to the
"micro-jump" of the placeholder text when the input field gets user
focus (and it "jumps" back when it loses one).

With this simple fix we always have invisible 1px border set to the
input, so it prevents "jumping".

--- a/assets/css/search-bar.css
+++ b/assets/css/search-bar.css
@@ -25,7 +25,7 @@
 
 .top-search .search-bar .search-input {
   background-color: var(--searchSearch);
-  border: none;
+  border: 1px solid transparent;
   border-radius: 8px;
   color: var(--searchAccentMain);
   position: relative;
